plotter/VTK_Visualization/NewFile
In file included from /usr/include/c++/12/memory:76,
                 from v_vtk/presenter/vtk/VisualizationStrategy.h:6,
                 from v_vtk/presenter/vtk/VisualizationFactory.h:2,
                 from v_vtk/presenter/vtk/VisualizationFactory.cpp:1:
/usr/include/c++/12/bits/unique_ptr.h: In instantiation of 'std::__detail::__unique_ptr_t<_Tp> std::make_unique(_Args&& ...) [with _Tp = visu::MeshVisualization; _Args = {unique_ptr<visu::IVisualizationConfigurator, default_delete<visu::IVisualizationConfigurator> >&}; __detail::__unique_ptr_t<_Tp> = __detail::__unique_ptr_t<visu::MeshVisualization>]':
v_vtk/presenter/vtk/VisualizationFactory.cpp:28:55:   required from here
/usr/include/c++/12/bits/unique_ptr.h:1065:30: error: use of deleted function 'std::unique_ptr<_Tp, _Dp>::unique_ptr(const std::unique_ptr<_Tp, _Dp>&) [with _Tp = visu::IVisualizationConfigurator; _Dp = std::default_delete<visu::IVisualizationConfigurator>]'
 1065 |     { return unique_ptr<_Tp>(new _Tp(std::forward<_Args>(__args)...)); }
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/12/bits/unique_ptr.h:514:7: note: declared here
  514 |       unique_ptr(const unique_ptr&) = delete;
      |       ^~~~~~~~~~
In file included from v_vtk/presenter/vtk/VisualizationFactory.cpp:2:
v_vtk/presenter/vtk/MeshVisualization.h:15:67: note:   initializing argument 1 of 'visu::MeshVisualization::MeshVisualization(std::unique_ptr<visu::IVisualizationConfigurator>)'
   15 |     MeshVisualization(std::unique_ptr<IVisualizationConfigurator> visualizationConfigurator);
